[gd_scene load_steps=2 format=3 uid="uid://6wfbysp7xism"]

[ext_resource type="Script" path="res://Debug/GDScripts/DebugOutput.gd" id="1_nrxht"]

[node name="Window" type="Window" groups=["DebugOutput"]]
position = Vector2i(0, 36)
size = Vector2i(500, 600)
script = ExtResource("1_nrxht")

[node name="Spawn Seed" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Spawn seed"

[node name="DebugText" type="Label" parent="." groups=["TextOut"]]
unique_name_in_owner = true
offset_left = 5.0
offset_top = 40.0
offset_right = 505.0
offset_bottom = 440.0
text = "null"

[node name="StackTraceAt" type="Label" parent="." groups=["StackOut"]]
unique_name_in_owner = true
offset_left = 5.0
offset_top = 400.0
offset_right = 45.0
offset_bottom = 426.0
text = "null"

[node name="FPSCount" type="Label" parent="." groups=["FPSOut"]]
unique_name_in_owner = true
offset_left = 400.0
offset_right = 440.0
offset_bottom = 26.0
text = "null"

[node name="ObjectCount" type="Label" parent="." groups=["ObjectCountOut"]]
unique_name_in_owner = true
offset_left = 350.0
offset_top = 25.0
offset_right = 390.0
offset_bottom = 51.0
text = "null"

[connection signal="pressed" from="Spawn Seed" to="." method="_on_spawn_seed_pressed"]
